LOGS/HPT_v1/runs.err
  File "STATS.py", line 2
    ! pip install xskillscore
    ^
SyntaxError: invalid syntax
